--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME='Receipt System'
 APP_ENV=local
 APP_KEY=base64:id6S9LfZjJ9w4ZCmdusCti2aGAuK6pTemq+YyPp+ebo=
 APP_DEBUG=true
